k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tornado-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tornado-app
    template:
        metadata:
            labels:
                app: tornado-app
        spec:
            containers:
                - name: python-container
                  image: us-central1-docker.pkg.dev/moaaz-461013/docker-repo/tornado-app
                  ports:
                      - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
    name: tornado-service
spec:
    selector:
        app: tornado-app
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8000
    type: NodePort
