k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tornado-ingress
    annotations:
        kubernetes.io/ingress.class: 'gce'
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: tornado-service
                            port:
                                number: 80
